Created .open-source in HTML&CSS

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
         </div>
       </div>
     </div>
+     <div class="open-source">
+        <span><a target=blank href="https://github.com/athita20/weather-app">Open-source code</a></span><span> by Athita K</span>
+      </div>
     <script src="index.js"></script>
   </body>
 </html>
